# InferGate

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mock_vllm/: main.py  requirements.txt
src/: config.py  dependencies.py  exceptions.py  main.py
src/models/: chat.py
src/routers/: chat.py  health.py
src/services/: vllm_client.py
tests/: conftest.py  test_chat.py
