[project]
name = "infergate"
version = "0.1.0"
description = "Production-grade chat API gateway backed by vLLM"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black Formatter.
line-length = 88
indent-width = 4

# Set Python Version - 3.12
target-version = "py312"

fix = false


[tool.ruff.lint]


select = ["E4", "E7", "E9", "F", "B", "T20", "N", "ANN", "ERA", "PERF"]
ignore = [
    "B008",  # FastAPI's Depends() in default args is intentional, not a bug
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = false
docstring-code-line-length = "dynamic"



[tool.pyright]
# --- Environment & discovery ---
pythonVersion = "3.12.10"          # Target Python semantics (pattern matching, typing features, stdlib types).
venvPath = "."                   # Where virtual envs live relative to repo root.
venv = ".venv"                   # The specific env name uv manages (uv sync creates .venv).

# --- What to analyze ---
include = ["*"]       # Top-level packages & tests to check.
exclude = [
  "**/.venv", "**/__pycache__", "build", "dist", ".git",
  ".ruff_cache", ".mypy_cache", "tests/", "**/tests/"
]

# --- Global strictness ---
typeCheckingMode = "standard"      # Standard typechecking mode